--- a/app/components/header.html
+++ b/app/components/header.html
@@ -5,9 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Фитнес зал "Ваше название"</title>
 </head>
 <body>
     <header>
-        header
+        <div class="navigation">
+            <div class="logo"></div>
+            <div class="menu">
+                <ul class="list">
+                    <li class="item">
+                        <a href="" class="link">О нас</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Галерея</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Абонементы</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Тренеры</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="link">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="phone">
+                <a href="tel:+74964161916">+7 (496) 416-19-16</a>
+            </div>
+        </div>
+        <div class="prev">
+            <h1 class="header-text">Фитнес клуб Пантеон</h1>
+            <p class="header-description">Лучше нас только боги</p>
+            <a href="#" class="btn-info">Получить консультацию</a>
+        </div>
+        <div class="social">
+            <ul class="list">
+                <li class="item">
+                    <a href="" class="link">
+                        <img src="img/fontisto_instagram.svg" alt="">
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="" class="link">
+                        <img src="img/fontisto_vk.svg" alt="">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </header>
