--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,188 @@
 @import '../../node_modules/reset-css/sass/reset';
+@import '../scss/fonts';
 
 body {
     padding: 0;
+    font-family: "Montserrat";
+    font-weight: 400;
 }
+
+.header-page {
+    width: 100%;
+    height: 950px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    img {
+        position: absolute;
+        background-size: cover;
+    }
+    .menu {
+        margin-top: 64px;
+        z-index: 98;
+    }
+    .logo {
+        width: 230px;
+    }
+    .phone {
+        margin-top: 65px;
+    }
+    .link {
+        text-decoration: none;
+        color: #fff;
+        transition: 1s;
+        font-size: 16px;
+        font-weight: 400;
+    }
+    .link:hover {
+        color:#F7931E;
+        transition: 1s;
+    }
+    .social {
+        display: flex;
+        justify-content: right;
+        width: 1440px;
+        height: 30px;
+        margin-bottom: 57px;
+    }
+    .information {
+        position: relative;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .prev {
+        position: absolute;
+        bottom: 51px;
+
+    }
+}
+
+.menu {
+    .list {
+        width: 581px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.navigation {
+    position: relative;
+    width: 1336px;
+    height: 106px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .img-top {
+        position: absolute;
+        width: 216px;
+        gap: 243px;
+        top: -34px;
+        right: 180px;
+    }
+    .img-left {
+        position: absolute;
+        left: -52px;
+        bottom: -935px;
+        width: 408px;
+    }
+}
+
+.social {
+    .list {
+        width: 70px;
+        margin-right: 63px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .item {
+        height: 35px;
+        display: flex;
+        justify-content: center;
+    }
+    .link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 35px;
+        height: 35px;
+    }
+    svg {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        fill: #fff;
+        transition: 1s;
+    }
+
+    svg:hover {
+        fill: #F7931E;
+        transition: 1s;
+    }
+}
+
+.information {
+    .header-text {
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 68px;
+    }
+    .header-description {
+        margin-top: 35px;
+        margin-bottom: 35px;
+        text-align: center;
+        font-weight: 400;
+        font-size: 28px;
+    }
+    .btn-info {
+        position: relative;
+        background-image: url("../img/Rectangle 14.webp");
+        width: 280px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+    }
+    .btn-info::before {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        background-image: url("../img/Rectangle 15.webp");
+        background-repeat: no-repeat;
+        width: 290px;
+        height: 60px;
+        transition: 1s;
+        z-index: 98;
+    }
+
+    .btn-info:hover::before {
+        position: absolute;
+        display: block;
+        bottom: 10px;
+        left: 15px;
+        transition: 1s;
+    }
+}
+
+
+
+
+
+
+
 
 .aboniment {
     width: 100%;
@@ -10,7 +190,9 @@ body {
 
 .aboniment-table {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .table-list {
     width: 100%;
