Правка img вставок

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header-page">
-        <img class="header-img" src="../img/pexels-cottonbro-7674492.webp" alt="">
+        <img class="header-img" src="img/pexels-cottonbro-7674492.webp" alt="">
         <div class="navigation">
             <img class="img-top" src="img/Component 1.webp" alt="">
             <img class="img-left" src="img/Component 3.webp" alt="">
